feat: 사용자 권한 추가 및 jwt 구조 변경